Archive2/54/554722d46b72a9/output
main.cpp: In member function 'decltype(auto) mem_fn_t<PM>::operator()(Args&& ...)':
main.cpp:9:16: error: 'invoke' is not a member of 'std'
         return std::invoke(p, std::forward<Args>(args)...);
                ^
